--- a/index.html
+++ b/index.html
@@ -456,6 +456,8 @@
       </div>
     </section>
 
-    <script src="js/script.min.js"></script>
+    <script src="js/forms.min.js"></script>
+    <script src="js/promo-slider.min.js"></script>
+    <script src="js/services-slider.min.js"></script>
   </body>
 </html>
