--- a/catalog.html
+++ b/catalog.html
@@ -422,6 +422,6 @@
       </div>
     </section>
 
-    <script src="js/script.min.js"></script>
+    <script src="js/forms.min.js"></script>
   </body>
 </html>
